Improved jatos result data submission
Removed data submission in on_close and on_finish events and put all data submission in the new event on_data_update

--- a/study_assets_root/Accentadaptation_man/Accent_adaptation_word_man.html
+++ b/study_assets_root/Accentadaptation_man/Accent_adaptation_word_man.html
@@ -27,8 +27,11 @@
     //initialize jsPsych 
       var jsPsych = initJsPsych({
         experiment_width: 600,
-        on_close: () => jatos.endStudy(jsPsych.data.get().csv(), "closed early"),
-        on_finish: () => jatos.endStudy(jsPsych.data.get().csv())
+        on_close: () => jatos.endStudy(false, "closed early"),
+        on_data_update: function() {
+          jatos.submitResultData(jsPsych.data.get().csv());
+        },
+        on_finish: () => jatos.endStudy(true)
       });
 
     //create timeline 
