--- a/study_assets_root/Accentadaptation_man/Accent_adaptation_word_man.html
+++ b/study_assets_root/Accentadaptation_man/Accent_adaptation_word_man.html
@@ -27,13 +27,19 @@
     //initialize jsPsych 
       var jsPsych = initJsPsych({
         experiment_width: 600,
-        on_close: () => jatos.endStudy(false, "closed early"),
+        on_close: function() {
+          jatos.submitResultData(jsPsych.data.get().csv());
+          jatos.endStudy(false, "study closed early");
+        },
         on_data_update: function() {
           jatos.submitResultData(jsPsych.data.get().csv());
         },
-        on_finish: () => jatos.endStudy(true)
+        on_finish: function() {
+          jatos.submitResultData(jsPsych.data.get().csv());
+          jatos.endStudy(true);
+        }
       });
-
+    
     //create timeline 
       var timeline = [];
       
